# CNF

./: .gitignore  README.md  create_hist.py  create_neyman.py  pyproject.toml  requirements.txt  train_NF.py  train_class.py
PreTrainedOwnTest/: DNNclass.ckpt  hist.json
PreTrainedOwnTest/SavedStats/: neyman.json
lib/: NF_comp.py  NormFlow.py  class_model.py  data_utils.py  stat_utils.py
