[project]
name = "cnfparameterestimation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=1.24.1",
    "pandas>=2.0.3",
    "pyarrow>=23.0.1",
    "pytorch-lightning==2.4.0",
    "requests>=2.33.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.10.1",
    "seaborn>=0.13.2",
    "tabulate>=0.10.0",
    "torch==2.3.0",
    "xgboost>=3.2.0",
]
